--- a/FabuzaExample/Info.plist
+++ b/FabuzaExample/Info.plist
@@ -40,6 +40,16 @@
 	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Need Camera</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Need Location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Геолокация используется только когда приложение запущено</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Need Microphone</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need Photo Library</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
