Обновлен Readme.MD и info.plist  для обеспечения совместимости с IOS 11+

--- a/FabuzaExample/Info.plist
+++ b/FabuzaExample/Info.plist
@@ -25,7 +25,7 @@
 			<string>com.application.fabuzaExample</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fabuzaExample</string>
+				<string>fabuzaApp</string>
 			</array>
 		</dict>
 	</array>
